test/tests/stages/18_structures/invalid_types/extra_credit/union_initializers/static_nested_init_too_long.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[37]:
  union
  identifier(u)
  {
  int
  identifier(a)
  ;
  long
  identifier(b)
  ;
  }
  ;
  struct
  identifier(s)
  {
  int
  identifier(tag)
  ;
  union
  identifier(u)
  identifier(contents)
  ;
  }
  ;
  struct
  identifier(s)
  identifier(my_struct)
  =
  {
  const int(10)
  ,
  {
  const int(1)
  ,
  const int(2)
  }
  }
  ;
